assets/style/main.scss
$primary: #679334;
$desktop-width: 1024px;
$tablet-width: 768px;
$phone-width: 540px;

@mixin for-desktop {
    @media (max-width: $desktop-width) {
        @content;
    }
}

@mixin for-tablet {
    @media (max-width: #{$tablet-width}) {
        @content;
    }
}

@mixin for-phone {
    @media (max-width: $phone-width) {
        @content;
    }
}

* {
    padding: 0;
    margin: 0;
}

.q-container {
    box-sizing: border-box;
    width: 100%;
    max-width: 1280px;
    padding: 0 5rem;
    margin: 0 auto;

    @include for-tablet {
        padding: 0 35px;
    }

    @include for-phone {
        padding: 0 20px;
    }
}

.container-inner {
    box-sizing: border-box;
    padding: 0 8rem;

    @include for-tablet {
        padding: 0 50px;
    }

    @include for-phone {
        padding: 0 20px;
    }
}

.bg-full-image {
    padding: 0;
    min-height: 120vh;
    background-color: #000;
    position: relative;
    overflow: hidden;

    & .bg-image {
        object-fit: cover;
        width: 100%;
        height: 130%;
        position: absolute;
        top: 0;
        left: 0;
        z-index: 0;
        opacity: .7;
        background: no-repeat 50%;
        background-size: cover;
    }
}

.section {
    padding: 150px 0 100px;

    @include for-desktop() {
        padding: 75px;
    }
}

.column {
    display: block;
    flex-basis: 0;
    flex-grow: 1;
    flex-shrink: 1;

    &s {
        display: flex;

        @include for-tablet {
            display: block;
        }
    }
}

